--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -381,7 +381,8 @@
   \"Beschreibung\":\"Mit geradem Rücken hinlegen,Gegengewicht in de Hände nehmen und mit ausgestreckten Armen hinter dem Kopf halten oder Bankende mit den Händen umgreifen\",
   \"Durchführung\":\"Bauch stets unter Spannung halten und ausgestreckte Beine kontrolliert nach oben bringen bis zum 90 Grad Winkel mit Oberkörper,Beine wieder zum Boden bewegen, dabei den Boden nicht berühhren\",
   \"Equipment\":\"Matte\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=Zp8LxkYt73c\"
 },
 {
   \"Muskelgruppe\":\"Beine,Oberschenkel\",
@@ -389,7 +390,8 @@
   \"Beschreibung\":\"Schulterbreit unter die Langhantelstange stellen und diese etwa schulterbreit umgreifen, so dass die Arme in etwa auf Höh der Ellenbogen sind,Stange auf die Nackenmuskulatur oder die hintere Schultermuskulatur legen,Mit geradem Rücken und leichter Hohlkreuzstellung die Stange ausheben,Blick nach vorne gerichtet - Rücken gerade - Bauchmuskeln angespannt\",
   \"Durchführung\":\"Kontrolliert die Beine beugen - dabei wird der Oberkörper nach vorne gebeugt und der Po nach hinten geschoben,Knie müssen stets in die gleiche Richtung zeigen wie Fußspitzen - Knie müssen hinter bis maximal auf gleicher Höhe mit den Fußspitzen sein,Wenn die Oberschenkel etwa parallel (kann stark variieren) zum Boden sind, kontrolliert wieder aufrichten\",
   \"Equipment\":\"Langhantel\",
-  \"Schwierigkeit\":\"Schwierig\"
+  \"Schwierigkeit\":\"Schwierig\",
+  \"Video\":\"https://www.youtube.com/watch?v=LdYm9HXBCXM\"
 },
 {
   \"Muskelgruppe\":\"Beine,Beinbizeps,Oberschenkel\",
@@ -397,7 +399,8 @@
   \"Beschreibung\":\"Vom aufrechten schulterbreiten Stand einen großen Schritt nach vorne machen,Die Hüfte gerade halten und Balance halten\",
   \"Durchführung\":\"Hüfte absenken bis das hintere Knie knapp über dem Boden ist,Beim Einatmen wieder in die Ausgangslage zurückkehren,Das Knie des vorderen Fußes nie über die Zehenspitzen zeigen lassen\",
   \"Equipment\":\"evtl. Zusatzgewicht\",
-  \"Schwierigkeit\":\"Mittel\"
+  \"Schwierigkeit\":\"Mittel\",
+  \"Video\":\"https://www.youtube.com/watch?v=yzfUl8vRQpM\"
 },
 {
   \"Muskelgruppe\":\"Rücken,Unterer Rücken,Beine\",
@@ -405,7 +408,8 @@
   \"Beschreibung\":\"Schulterbreit vor die Langhantel stellen und etwas breiter als schulterbreit greifen, mindestesn jedoch so breit, dass bei der Ausführung der Übung die Ellenbogen nicht an die Knie stoßen,In die Hocke gehen, Rücken dabei stabil und leicht im Hohlkreuz,Bauchmuskeln sind angespannt - Blick starr nach vorne gerichtet,Der ganze Körper muss unter Spannung stehen und gehalten werden - Zu keinem Zeitpunkt darf der Rücken rund sein!\",
   \"Durchführung\":\"Beim Aufrichten die Langhantel möglichst nahe am Körper entlang führe,Die Kraft kommt aus den Beinen und dem unteren Rücken,Langsam, gleichmäßig und ohne Schwung die Beine strecken und gleichzeitig den Rücken aufrichten\",
   \"Equipment\":\"Langhantel\",
-  \"Schwierigkeit\":\"Schwierig\"
+  \"Schwierigkeit\":\"Schwierig\",
+      \"Video\":\"https://www.youtube.com/watch?v=GE9njW0EGLs\"
 },
 {
   \"Muskelgruppe\":\"Beine,Waden\",
@@ -413,7 +417,8 @@
   \"Beschreibung\":\"Suche eine beliebige Erhögung (Brett,Stepper,Gewichtsscheiben etc.) und nimm in jede Hand eine Kurzhantel oder eine Gewichtsscheibe,Mit den Fußballen auf das Brett stellen,Fersen in der Luft hängen lassen\",
   \"Durchführung\":\"Beim Ausatmen die Fersen abdrücken und die Waden bis zur maximal möglichen Streckung anheben\",
   \"Equipment\":\"evtl. Zusatzgewicht\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=2ljdThlsg10\"
 },
 {
   \"Muskelgruppe\":\"Bauch,Gerader Bauchmuskel\",
@@ -421,7 +426,8 @@
   \"Beschreibung\":\"Vollständig anlehnen,Unterarme liegen auf den Armpolstern - die Griffe umgreifen,Beine fast ausgestreckt - nur leichte Beugung im Kniegelenk\",
   \"Durchführung\":\"Beim Ausatmen die Beine kontrolliert so weit wie möglich nach oben bewegen,Ohne Schwung arbeiten\",
   \"Equipment\":\"Fitnessstudio\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=2N0PTThkTtw\"
 },
 {
   \"Muskelgruppe\":\"Schultern,Vordere Schulter\",
@@ -429,7 +435,8 @@
   \"Beschreibung\":\"Schulterbreiter Stand,Langhantel etwas mehr als schulterbreit greifen,Handgelenke stets gerade und über Ellenbogen\",
   \"Durchführung\":\"Kontrolliert hochdrücken,Beim Absenken nicht zu tief senken - Oberarme nur etwas tiefer als Schultergelenk\",
   \"Equipment\":\"Langhantel\",
-  \"Schwierigkeit\":\"Mittel\"
+  \"Schwierigkeit\":\"Mittel\",
+  \"Video\":\"https://www.youtube.com/watch?v=AnyUUSqT1T0\"
 },
 {
   \"Muskelgruppe\":\"Schultern,Vordere Schulter\",
@@ -437,7 +444,8 @@
   \"Beschreibung\":\"Vollständig anlehnen,Handgelenke über den Ellenbogen,Ellenbogen stets vor dem Körper halten\",
   \"Durchführung\":\"Kontrolliert hochdrücken,Beim Absenken nicht zu tief senken - Oberarme nur etwas tiefer als Schultergelenk\",
   \"Equipment\":\"Fitnessstudio\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=GknOWmbcK_M\"
 },
 {
   \"Muskelgruppe\":\"Schultern,Seitliche Schulter\",
@@ -461,7 +469,9 @@
   \"Beschreibung\":\"Stange am tiefen Block montieren,Mit dem Rücken zum Block stellen und Stange zwischen den Beinen durchführen,Stange im Obergriff greifen\",
   \"Durchführung\":\"Stange von den Beinen weg mit leichter Beugung im Ellenbogen nach vorne bis auf Brusthöhe heben - Schultern dabei stets fixiert halten\",
   \"Equipment\":\"Fitnessstudio\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=XLKslVKpOus\"
+
 },
 {
   \"Muskelgruppe\":\"Schultern,Hintere Schulter\",
@@ -485,7 +495,8 @@
   \"Beschreibung\":\"Hüftbreiter Stand,SZ-Stange mit einer Handbreite Abstand im Obergriff nehmen,\",
   \"Durchführung\":\"SZ-Stange senkrecht und eng am Körper nach oben über die Ellenbogen bis zum Kinn heben\",
   \"Equipment\":\"SZ-Stange\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=oH1MpWBHiuU\"
 },
 {
   \"Muskelgruppe\":\"Rücken,Oberer Rücken,Nacken\",
@@ -501,7 +512,8 @@
   \"Beschreibung\":\"Sz Stange schulterbreit im Untergriff greifen und mit geradem Rücken aufheben\",
   \"Durchführung\":\"Mit leichter Beugung im Ellenbogen Stange hocheben bis zum Punkt der maximalen Kontraktion,Ellenbogen nicht mitbewegen\",
   \"Equipment\":\"SZ-Stange\",
-  \"Schwierigkeit\":\"Einfach\"
+  \"Schwierigkeit\":\"Einfach\",
+      \"Video\":\"https://www.youtube.com/watch?v=p4BIu6wCBLQ\"
 },
 {
   \"Muskelgruppe\":\"Arme,Bizeps\",
@@ -549,7 +561,9 @@
   \"Beschreibung\":\"Mit geradem Rücken auf Flachbank legen,SZ-Stange eng im Obergriff nehmen - so, dass Daumen zum Körper zeigen,Oberarme gerade nach oben strecken\",
   \"Durchführung\":\"Oberarme bleiben stets an der gleichen Position,Von ausgestreckter Position Unterarme Richtung Kopf senken,Wieder bis zur vollständigen Streckung drücken\",
   \"Equipment\":\"SZ-Stange,Flachbank\",
-  \"Schwierigkeit\":\"Mittel\"
+  \"Schwierigkeit\":\"Mittel\",
+  \"Video\":\"https://www.youtube.com/watch?v=MyDkXuq1P8g\"
+
 },
 {
   \"Muskelgruppe\":\"Trizeps\",
