--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -409,7 +409,7 @@
   \"Durchführung\":\"Beim Aufrichten die Langhantel möglichst nahe am Körper entlang führe,Die Kraft kommt aus den Beinen und dem unteren Rücken,Langsam, gleichmäßig und ohne Schwung die Beine strecken und gleichzeitig den Rücken aufrichten\",
   \"Equipment\":\"Langhantel\",
   \"Schwierigkeit\":\"Schwierig\",
-      \"Video\":\"https://www.youtube.com/watch?v=GE9njW0EGLs\"
+      \"Video\":\"https://www.youtube.com/embed/GE9njW0EGLs\"
 },
 {
   \"Muskelgruppe\":\"Beine,Waden\",
